--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,15 +1,169 @@
 :root {
-  --primary-color: #5EB9F0;
+  --primary-color: #5eb9f0;
   --paragraph-color: #360697;
-  --heading-color: #343F52;
+  --heading-color: #343f52;
   --skyblue: #5eb9f0;
-  --white: #FFFFFF;
+  --white: #ffffff;
+  --light-gray: #f0f8fe;
 }
 
 body {
   font-family: "Urbanist", sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  color: var(--heading-color);
+  font-size: 54px;
+  line-height: 62px;
+
+  & span {
+    color: var(--primary-color);
+  }
+}
+
+h2 {
+  color: (--heading-color);
+  font-size: 42px;
+  line-height: 50px;
+}
+
+h3 {
+  color: (--heading-color);
+  font-size: 23px;
+  line-height: 32px;
+}
+
+main {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+p {
+  color: (--paragraph-color);
+  font-size: 17px;
+  line-height: 29px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  & li a {
+    text-decoration: none;
+    color: var(--heading-color);
+    font-weight: 600;
+  }
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  border-radius: 25px;
+  box-shadow: 1px 0.1rem 0.5rem 0px rgb(60 60 60 / 39%);
+  color: var(--white);
+  display: block;
+  padding: 16px;
+  text-decoration: none;
+  width: fit-content;
+}
+
 .hero {
-  background-color: chartreuse;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 60px;
+
+  & h1 {
+    min-width: 405px;
+    margin-bottom: 20px;
+  }
+
+  & p {
+    font-size: 22px;
+    line-height: 34px;
+    margin-bottom: 30px;
+  }
+}
+
+/* services styles */
+.services {
+  background-color: var(--light-gray);
+  padding: 50px;
+
+  & h2 {
+    max-width: 655px;
+    margin: 0 auto 70px;
+    text-align: center;
+  }
+}
+
+.services-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.services-item {
+  text-align: center;
+
+  & h3 {
+    margin-bottom: 15px;
+  }
+
+  & a {
+    color: var(--primary-color);
+    text-decoration: underline;
+  }
+
+  & p {
+    max-width: 316px;
+    margin: 0 auto 20px;
+  }
+}
+
+/*Testimonial Style*/
+.testimonials {
+  background-color: var(--light-gray);
+  padding: 70px 0;
+
+  & h2 {
+    max-width: 670px;
+    text-align: center;
+    margin: 0 auto 50px;
+  }
+}
+
+.testimonials-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.testimonials-item {
+  background-color: var(--white);
+  padding: 20px;
+  & p {
+    font-size: 18px;
+  }
+}
+
+.testimonials-author {
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  margin-top: 30px;
+
+  & img {
+    max-width: 70px;
+  }
 }
