--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -58,7 +58,8 @@ h3 {
   line-height: 32px;
 }
 
-main {
+img {
+  max-width: 100%;
 }
 
 nav {
@@ -114,6 +115,8 @@ ul {
 .container {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 0 15px;
+
 }
 
 .faqs {
@@ -128,8 +131,7 @@ ul {
 
 .faqs-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 80px;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 .faqs-item {
@@ -144,9 +146,10 @@ ul {
 }
 
 .footer-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   align-items: center;
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(1, 1fr);
 
   & .btn-primary {
     justify-self: center;
@@ -170,6 +173,7 @@ ul {
 
 .hero-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-bottom: 30px;
 }
@@ -177,6 +181,7 @@ ul {
 /* Projects Styles */
 .projects {
   padding: 50px 0 100px;
+
   & h2 {
     margin: 0 auto 50px;
     max-width: 780px;
@@ -186,7 +191,8 @@ ul {
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 /* services styles */
@@ -203,7 +209,8 @@ ul {
 
 .services-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 .services-item {
@@ -244,7 +251,7 @@ ul {
 
 .strategy-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 40px;
   align-items: center;
 }
@@ -264,14 +271,6 @@ ul {
   max-width: 520px;
   padding: 20px;
   position: relative;
-
-  &:nth-child(2) {
-    left: 50px;
-  }
-
-  &:nth-child(3) {
-    left: 20px;
-  }
 
   & .order {
     background-color: var(--skyblue);
@@ -294,7 +293,7 @@ ul {
   align-items: center;
   display: grid;
   gap: 20px;
-  grid-template-columns: 1fr 2fr auto;
+  grid-template-columns: repeat(1, 1fr);
   justify-items: center;
 }
 
@@ -305,7 +304,8 @@ ul {
 
   & h3 {
     font-size: 20px;
-    & + p {
+
+    &+p {
       color: #aab0bc;
       text-transform: uppercase;
     }
@@ -316,18 +316,19 @@ ul {
   display: grid;
   gap: 20px;
   grid-column: 1 / -1;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(1, 1fr);
 }
 
 .team-stadistics {
   display: flex;
+  flex-wrap: wrap;
   gap: 100px;
 }
 
 .team-stadiatics-item {
   display: flex;
+  flex: 1;
   flex-direction: column;
-  gap: 10px;
   align-items: center;
   text-align: center;
 
@@ -357,7 +358,7 @@ ul {
 
 .testimonials-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 20px;
 }
 
@@ -380,3 +381,84 @@ ul {
     max-width: 70px;
   }
 }
+
+
+@media (min-width: 768px) {
+
+  .faqs-container {
+    gap: 30px;
+  }
+
+  .footer-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .hero-container {
+    flex-wrap: nowrap;
+
+    & h1 {
+      font-size: 40px;
+    }
+
+    & p {
+      font-size: 18px;
+    }
+  }
+
+  .projects-container {
+    grid-auto-columns: repeat(2, 1fr);
+  }
+
+  .strategy-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .team-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .team-stadiatics-item {
+    gap: 10px;
+  }
+
+  .testimonials-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .faqs-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 80px;
+  }
+
+  .services-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .strategy-card {
+
+    &:nth-child(2) {
+      left: 50px;
+    }
+
+    &:nth-child(3) {
+      left: 20px;
+    }
+  }
+
+  .team-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .team-container {
+    grid-template-columns: 1fr 2fr auto;
+  }
+
+  .testimonials-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+}
+
+@media (min-width: 1280px) {}
