--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -69,6 +69,24 @@ nav {
 .nav-container {
   display: flex;
   justify-content: space-between;
+
+  & ul {
+    display: none;
+    position: absolute;
+    background-color: var(--primary-color);
+    top: 0;
+    left: 0;
+    height: 100vh;
+    /* display: flex; */
+    flex-direction: column;
+    padding: 20px 0;
+    text-align: center;
+    width: 100%;
+
+    & a {
+      color: var(--white);
+    }
+  }
 }
 
 p {
@@ -116,7 +134,6 @@ ul {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 15px;
-
 }
 
 .faqs {
@@ -305,7 +322,7 @@ ul {
   & h3 {
     font-size: 20px;
 
-    &+p {
+    & + p {
       color: #aab0bc;
       text-transform: uppercase;
     }
@@ -382,9 +399,7 @@ ul {
   }
 }
 
-
 @media (min-width: 768px) {
-
   .faqs-container {
     gap: 30px;
   }
@@ -404,6 +419,12 @@ ul {
       font-size: 18px;
     }
   }
+
+  /* .nav-container { */
+  /*   & ul { */
+  /*     display: flex; */
+  /*   } */
+  /* } */
 
   .projects-container {
     grid-auto-columns: repeat(2, 1fr);
@@ -436,17 +457,6 @@ ul {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .strategy-card {
-
-    &:nth-child(2) {
-      left: 50px;
-    }
-
-    &:nth-child(3) {
-      left: 20px;
-    }
-  }
-
   .team-list {
     grid-template-columns: repeat(4, 1fr);
   }
@@ -458,7 +468,16 @@ ul {
   .testimonials-list {
     grid-template-columns: repeat(3, 1fr);
   }
-
 }
 
-@media (min-width: 1280px) {}
+@media (min-width: 1280px) {
+  .strategy-card {
+    &:nth-child(2) {
+      left: 50px;
+    }
+
+    &:nth-child(3) {
+      left: 20px;
+    }
+  }
+}
